# arbitro-kit

./: .gitignore  AUDIT.md  Cargo.toml  README.md
.agent/rules/: testing.md
.claude/: CLAUDE.md
.github/workflows/: ci.yml
benches/: async_h2h.rs  cap_sweep.rs  channel_overhead.rs  duplex_overhead.rs  duplex_probe.rs  fanin_h2h.rs  gate_channel_focus.rs  gate_overhead.rs  hub_multibit.rs  hub_overhead.rs  hub_sparse.rs  lifeline_overhead.rs  mem_ring_batched.rs  mem_ring_h2h.rs  mpmc_overhead.rs  mpmc_ring_cap.rs  mpmc_ring_cap_batched.rs  mpsc_clone_async_overhead.rs  mpsc_clone_overhead.rs  mpsc_notify_ab.rs  mpsc_overhead.rs  mpsc_vs_mpmc.rs  mpsc_vs_mpsc2.rs  oneshot_h2h.rs  pipe_overhead.rs  ring_byo_atomic.rs  ring_overhead.rs  ring_vs_crossbeam.rs  ring_vs_disruptor.rs  rpc_patterns.rs  signal_compare.rs  signal_duplex_probe.rs  signalset_factory.rs  signalset_vs_signals.rs  stream_overhead.rs  stream_probe.rs  synapse_overhead.rs  tcp_ping_pong.rs
docs/: channel.md  duplex.md  hub.md  lifeline.md  mpmc.md  mpsc.md  pipe.md  ring.md  signal.md  signalset.md  stream.md  waiter.md
docs/research/: bucketed_zerocopy.md  stream_brainstorm.md
examples/: actor_pool.rs  mpmc_memory_10k.rs  mpsc2_tokio_smoke.rs  relay_8hop.rs
src/: lib.rs
src/gate/: channel.rs  gate.rs  gate_set.rs  hub.rs  lifeline.rs  mod.rs  mpmc.rs  one_signal.rs  park.rs  pipe.rs  ring.rs  signal.rs  signal_packed.rs  signal_set.rs  signal_states.rs
src/route/: hub.rs  mod.rs  mpmc.rs  mpsc.rs  mpsc2.rs  oneshot.rs  oneshot_async.rs
src/slot/: channel.rs  mod.rs  pipe.rs  pipe_async.rs
src/stream/: buffered.rs  duplex.rs  mod.rs  receipt.rs  recv.rs  ring.rs  ring2.rs  segment.rs  send.rs  spsc2.rs  stream.rs  tests.rs
src/synapse/: consumer.rs  mod.rs  producer.rs  state.rs  tests.rs  wake.rs
src/waiter/: mod.rs  noop.rs  notify.rs  park.rs  park2.rs
tests/: loom_notify_gate.rs  loom_park_gate.rs  loom_ring.rs  loom_ring2.rs  mpsc2_stress_10x.rs  mpsc_stress_10x.rs
