[package]
name = "arbitro-kit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-dependency synchronization and utility primitives from the Arbitro ecosystem."
readme = "README.md"

[dependencies]
# No runtime dependencies. std-only.

[dev-dependencies]
# Only for benchmarks: compare our primitives against crossbeam equivalents.
# Runtime crate itself stays dep-free.
crossbeam-channel = "0.5"
crossbeam-deque = "0.8"
crossbeam-utils = "0.8"
disruptor = "4.1"

[[bench]]
name = "signal_compare"
harness = false

[[bench]]
name = "gate_overhead"
harness = false

[[bench]]
name = "channel_overhead"
harness = false

[[bench]]
name = "pipe_overhead"
harness = false

[[bench]]
name = "hub_overhead"
harness = false

[[bench]]
name = "ring_overhead"
harness = false

[[bench]]
name = "mpmc_overhead"
harness = false

[[bench]]
name = "signalset_vs_signals"
harness = false

[[bench]]
name = "signalset_factory"
harness = false

[[bench]]
name = "ring_byo_atomic"
harness = false

[[bench]]
name = "hub_sparse"
harness = false

[[bench]]
name = "hub_multibit"
harness = false

[[bench]]
name = "fanin_h2h"
harness = false

[[bench]]
name = "ring_vs_crossbeam"
harness = false

[[bench]]
name = "ring_vs_disruptor"
harness = false

[[bench]]
name = "rpc_patterns"
harness = false

[[bench]]
name = "stream_overhead"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1
