[package]
name = "arbitro-kit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Zero-dependency synchronization and utility primitives from the Arbitro ecosystem."
readme = "README.md"

[dependencies]
# No runtime dependencies by default. std-only.
# Optional `tokio` feature pulls tokio::sync only — for the async-flavored
# primitives (PipeAsync, OneShotAsync) that target the OS-thread→tokio-task
# wake path. Enable from downstream via `features = ["tokio"]`.
tokio = { version = "1", features = ["sync"], default-features = false, optional = true }

[features]
default = []
# Async (tokio-backed) variants of slot/route primitives. Designed for the
# specific case where a wake fires from a non-tokio thread (TCP reader,
# FFI callback, OS-thread worker) and must release a tokio task — where
# OS-thread `unpark` would land on a cold core and lose to runtime
# multiplexing. See `slot::PipeAsync` and `route::OneShotAsync`.
tokio = ["dep:tokio"]

[dev-dependencies]
# Only for benchmarks: compare our primitives against crossbeam equivalents.
# Runtime crate itself stays dep-free.
crossbeam-channel = "0.5"
crossbeam-utils = "0.8"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread", "macros", "time", "io-util", "net"] }

# Linux-only: raw io_uring for the `mem_ring_h2h` in-memory bench.
[target.'cfg(target_os = "linux")'.dev-dependencies]
io-uring = "0.7"

# Loom is pulled in only when the crate is built with `--cfg loom`. Used
# by `tests/loom_ring2.rs` and the `#[cfg(loom)]` atomic shim inside
# `src/stream/ring2.rs`.
[target.'cfg(loom)'.dependencies]
loom = "0.7"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(loom)'] }

[[bench]]
name = "gate_overhead"
harness = false

[[bench]]
name = "channel_overhead"
harness = false

[[bench]]
name = "pipe_overhead"
harness = false

[[bench]]
name = "hub_overhead"
harness = false

[[bench]]
name = "mpmc_overhead"
harness = false

[[bench]]
name = "duplex_overhead"
harness = false

[[bench]]
name = "lifeline_overhead"
harness = false

[[bench]]
name = "oneshot_h2h"
harness = false

[[bench]]
name = "mem_ring_batched"
harness = false
required-features = ["tokio"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1

[profile.bench]
opt-level = 3
lto = "thin"
codegen-units = 1

